# hashclash

./: .gitignore  CMakeLists.txt  README.md  flake.nix  justfile
cmake/: Findavx2.cmake
lib/: CMakeLists.txt
lib/hashclash/: CMakeLists.txt  config.h  differentialpath.cpp  sdr.cpp  types.hpp
scripts/: cpc.sh  poc_no.sh
src/: CMakeLists.txt
src/md5backward/: CMakeLists.txt  main.cpp  main.hpp
src/md5birthdaysearch/: CMakeLists.txt  birthday.cpp  simd_avx256.cpp  storage.cpp
src/md5connect/: CMakeLists.txt  main.cpp  main.hpp
src/md5fastcoll/: CMakeLists.txt  main.cpp
src/md5forward/: CMakeLists.txt  main.cpp  main.hpp
src/md5helper/: CMakeLists.txt  collisionfinding.cpp  main.cpp  main.hpp
src/sha1attackgenerator/: CMakeLists.txt  collisionfinding.cpp  tunnel_analysis.cpp
src/sha1backward/: CMakeLists.txt
src/sha1connect/: CMakeLists.txt  main.cpp  main.hpp
src/sha1forward/: CMakeLists.txt
src/sha1helper/: CMakeLists.txt  convert.cpp
