add_subdirectory(md5backward)
add_subdirectory(md5birthdaysearch)
add_subdirectory(md5connect)
add_subdirectory(md5fastcoll)
add_subdirectory(md5forward)
add_subdirectory(md5helper)
# add_subdirectory(sha1attackgenerator)
# add_subdirectory(sha1backward)
# add_subdirectory(sha1connect)
# add_subdirectory(sha1forward)
# add_subdirectory(sha1helper)
